--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="menu_wardrobe">Mon Dressing</string>
     <string name="menu_detail">Détail</string>
     <string name="header_title_add_wardrobe_element">Nouvel élément</string>
+    <string name="header_title_add_wardrobe_outfit">Nouvelle tenue</string>
     <string name="header_title_edit_wardrobe_element">Modifier un élément</string>
     <string name="header_title_edit_wardrobe_element_confirmation">Element ajouté</string>
     <string name="wardrobe_no_entries">Votre dressing est vide pour le moment, comme c\'est triste...</string>
