--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -127,4 +127,14 @@
     <string name="read_external_storage_permission_denied">Erreur : le droit de lecture du support de stockage externe est requis pour le bon fonctionnement de l\'application</string>
     <string name="write_external_storage_permission_denied">Erreur : le droit d\'écriture du support de stockage externe est requis pour le bon fonctionnement de l\'application</string>
     <string name="internet_permission_denied">Erreur : le droit d\'accès à Internet est requis pour le bon fonctionnement de l\'application</string>
+
+    <string name="sync_with_api">Synchroniser</string>
+    <string name="is_synching">Synchronisation en cours...</string>
+    <string name="nothing_to_sync">Rien à synchroniser</string>
+    <string name="sync_done">Synchronisation terminée</string>
+    <string name="sync_failed">Échec de synchronisation</string>
+
+    <string name="wardrobe_list_activity_sync_pending">En attente de synchronisation : </string>
+    <string name="wardrobe_list_activity_sync_success">Synchronisations réussies : </string>
+    <string name="wardrobe_list_activity_sync_error">Erreurs de synchronisation : </string>
 </resources>
