Working on logout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,6 +34,10 @@
     <string name="logon_page_send_button">Se connecter</string>
     <string name="logon_page_subscribe_button">Créer Un Compte</string>
 
+    <string name="logout_title">Déconnexion</string>
+    <string name="logout_non_synch_warning">Des données n\'ont pas encore été synchronisées avec le serveur. Elles seront définitivement perdues si vous vous déconnectez maintenant</string>
+    <string name="logout_remove_data_warning">Les données liées à ce compte seront supprimées de ce téléphone (elles sont toutefois conservées sur le serveur)</string>
+
     <string name="outfits_no_entries">Vous n\'avez pas encore de tenues</string>
 
     <string name="wardrobe_element_detail_remove_alert_title">Supprimer un élément</string>
@@ -106,6 +110,8 @@
     <string name="sign_up_password_help">Chiffres/lettres (6 à 24 caractères)</string>
     <string name="sign_up_confirmation">Confirmation du mot de passe</string>
     <string name="sign_up_send">Créer un compte</string>
+    <string name="sign_up_terms_of_use">J\'accepte les conditions d\'utilisation</string>
+    <string name="sign_up_terms_of_use_detail">Lire les conditions d\'utilisation</string>
     <string name="sign_up_error_email_empty">Veuillez entrer une adresse email</string>
     <string name="sign_up_error_email_format">Format de l\'adresse email incorrect</string>
     <string name="sign_up_error_firstname_empty">Veuillez entrer un prénom</string>
@@ -116,6 +122,7 @@
     <string name="sign_up_error_password_format">Format du mot de passe incorrect</string>
     <string name="sign_up_error_confirmation_empty">Veuillez entrer la confirmation du mot de passe</string>
     <string name="sign_up_error_confirmation_mismatch">Les deux mots de passe ne correspondent pas</string>
+    <string name="sign_up_error_terms_of_use">Vous devez accepter les conditions d\'utilisation</string>
     <string name="sign_up_success">Compte créé avec succès</string>
 
     <string name="sign_in_email_empty">Veuillez entrer une adresse email</string>
